# ngbs-climate

./: README.md
.github/workflows/: python-tests.yml  ruff.yml
ngbs-api/: pyproject.toml  ruff.toml
ngbs-api/.github/workflows/: ruff.yml
ngbs-api/ngbs_api/: __init__.py  client.py  errors.py  models.py  types.py  validators.py
ngbs-api/tests/unit/: test_models.py  test_validators.py
